--- a/Main/detailed_data_analysis.ipynb
+++ b/Main/detailed_data_analysis.ipynb
@@ -2166,7 +2166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
